2007-10-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* Tomboy/Watchers.cs, Tomboy/NoteWindow.cs: Use Buffer.GetSlice () instead
	  of Buffer.GetText () because the GetSlice call accounts for
	  non-character items in the buffer such as pixbufs and widgets.

2007-09-16  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* help/C/figures/tomboy-preferences-synchronization.png: Forgot to add
	  this earlier (thanks to Daniel Nylander for catching this!).

2007-09-16  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* help/C/figures/tomboy-preferences-hotkeys.png,
	  help/C/figures/tomboy-main-menu.png,
	  help/C/figures/tomboy-new-note.png,
	  help/C/figures/tomboy-preferences-add-ins.png,
	  help/C/figures/tomboy-panel.png,
	  help/C/figures/tomboy-preferences-plugins.png,
	  help/C/figures/tomboy-preferences-editing.png, help/C/tomboy.xml:
	  Updated all screenshots for help documentation.  Replaced
	  tomboy-preferences-plugins.png with tomboy-preferences-addins.png,
	  and also added tomboy-preferences-synchronization.png.

2007-09-16  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* help/C/tomboy.xml: GDP-recommended use of terms like "drop-down list"
	  and "menu".  Also eliminated usage of apostrohpes for contractions
	  and posession.

2007-09-16  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* help/C/tomboy.xml: Cleanup in the synchronization section.

2007-09-15  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* NEWS: Updated NEWS for 0.8.0.

2007-09-14  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* README: Updating Tomboy website URL.

2007-09-14  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* help/C/tomboy.xml: Minor sync draft update.
	* configure.in: Bump for 0.8.0 (next release).

2007-09-14  Sandy Armstrong <sanfordarmstrong@gmail.com> 

	* help/C/tomboy.xml: Draft content for synchronization section.  Other
	  minor style fixes.

2007-09-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 
